set memory limits and memory management options for all JVM processes